--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,9 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-version = '1.0.0'
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.14.1'
-}
 dependencies {
-    compile 'com.google.guava:guava:22.0'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-    testCompile 'org.assertj:assertj-core:3.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'junit:junit:4.13.1'
 }
+
+
